load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "fakessh_lib",
    srcs = ["fakessh.go"],
    importpath = "github.com/google/tsunami-security-scanner-testbed/truepositives/secure/fakessh",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_x_crypto//ssh:go_default_library"],
)

go_binary(
    name = "fakessh",
    embed = [":fakessh_lib"],
    visibility = ["//visibility:public"],
)
